// Copyright 2023 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";
package io.harness.notification;
option java_multiple_files = true;

message NotificationTriggerRequest {
  string accountId = 1;
  string orgId = 2;
  string projectId = 3;
  string eventEntity = 4;
  string event = 5;
  map<string, string> templateData = 6;
  string id = 7;
}
